# Enlightenment_Module

./: README.md  genmod.rb
hello_world/: AUTHORS  Makefile.am  configure.ac  e-module-hello_world.edc  e_modules-hello_world.spec.in  hello_world.edc  module.desktop.in
hello_world/src/: e_mod_main.c  e_mod_main.h
skel/: AUTHORS  Makefile.am  configure.ac  e-module-skel.edc  e_modules-skel.spec.in  module.desktop.in  skel.edc
skel/src/: e_mod_main.c  e_mod_main.h
